object calisthenics-Actors(Animals) vs Strings