@@ -1,15 +1,14 @@
 package org.example;
 
 import java.util.ArrayList;
-import java.util.List;
 
 class Song {
     private final SongPrinter printer;
     private final SongStructure structure;
-    private List<String> items;
+    private ActorsList actors;
 
-    public Song(List<String> items, SongPrinter printer, SongStructure structure) {
-        this.items = items;
+    public Song(ActorsList actors, SongPrinter printer, SongStructure structure) {
+        this.actors = actors;
         this.printer = printer;
         this.structure = structure;
     }
@@ -20,44 +19,55 @@ class Song {
     }
 
     private String create() {
-        List<String> itemsInTheVerse = new ArrayList<>();
+        ActorsList itemsInTheVerse = new ActorsList(new ArrayList<>());
         String song = "";
-        for (int itemOrder = 0; itemOrder < items.size() - 1; itemOrder++) {
-            String item = items.get(itemOrder);
-            itemsInTheVerse.add(item);
-            song += createVerse(itemsInTheVerse);
+        Actor actor = actors.getFirst();
+        Actor lastActor = actors.getLast();
+        ActorsList actorsInTheVerse = actors.getPrecedents(actor);
+        while (!actor.is(lastActor)) {
+            song += createVerse(actorsInTheVerse);
+            actor = actors.getNext(actor);
+            actorsInTheVerse = actors.getPrecedents(actor);
         }
-        song += createFinalVerse(items);
+
+        song += createFinalVerse(actors);
         return song;
     }
 
 
-    private String createVerse(List<String> items) {
-        String result = createFirstPhrase(items);
-        result += String.format(structure.getDifferentPhrase(), items.get(items.size() - 1));
-        result += createBody(items);
-        result += String.format(structure.getEndOfVerse(), items.get(0));
+    private String createVerse(ActorsList actors) {
+        String result = createFirstPhrase(actors);
+        Actor firstActor = actors.getFirst();
+        Actor lastActor = actors.getLast();
+        result += String.format(structure.getDifferentPhrase(), lastActor.getName());
+        result += createBody(actors);
+        result += String.format(structure.getEndOfVerse(), firstActor.getName());
         return result;
     }
 
-    private String createBody(List<String> animals) {
+    private String createBody(ActorsList actors) {
         String result = "";
-        for (int animalOrder = animals.size() - 1; animalOrder > 0; animalOrder--) {
-            String animal = animals.get(animalOrder);
-            String secondAnimal = animals.get(animalOrder - 1);
-            result += String.format(structure.getRefrainOfTheVerse(), animal, secondAnimal, (animalOrder == 1 ? ";" : ","));
+        Actor actor = actors.getLast();
+        Actor firstActor = actors.getFirst();
+        int actorOrder = actors.size() - 1; //TODO: refactorizar
+        while (!actor.is(firstActor)) {
+            Actor secondActor = actors.getPrecedent(actor);
+            result += String.format(structure.getRefrainOfTheVerse(), actor.getName(), secondActor.getName(), (actorOrder == 1 ? ";" : ","));
+            actor = secondActor;
+            actorOrder--;
         }
+
         return result;
     }
 
-    private String createFirstPhrase(List<String> animals) {
-        String animal = animals.get(animals.size() - 1);
-        String endline = animals.size() == 1 ? "." : ";";
-        return String.format(structure.getFirstPhrase(),animal, endline);
+    private String createFirstPhrase(ActorsList actors) {
+        Actor actor = actors.getLast();
+        String endline = actors.size() == 1 ? "." : ";";
+        return String.format(structure.getFirstPhrase(), actor.getName(), endline);
     }
 
-    private String createFinalVerse(List<String> animals) {
-        String animal = animals.get(animals.size() - 1);
-        return String.format(structure.getFinalPhrase(), animal);
+    private String createFinalVerse(ActorsList actors) {
+        Actor actor = actors.getLast();
+        return String.format(structure.getFinalPhrase(), actor.getName());
     }
 }
